--- a/configs/hifive_premier_p550_defconfig
+++ b/configs/hifive_premier_p550_defconfig
@@ -29,6 +29,7 @@ CONFIG_SYS_BOOTM_LEN=0x04000000
 CONFIG_CMD_ERASEENV=y
 CONFIG_CMD_NVEDIT_EFI=y
 CONFIG_CMD_GPIO=y
+CONFIG_CMD_LED=y
 CONFIG_CMD_GPT=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_ESWOTP=y
@@ -104,3 +105,5 @@ CONFIG_DRM_ESWIN=y
 CONFIG_DRM_ESWIN_DW_HDMI=y
 CONFIG_DRM_ESWIN_DW_MIPI_DSI=y
 CONFIG_BMP_24BPP=y
+CONFIG_LED=y
+CONFIG_LED_GPIO=y
