--- a/arch/riscv/dts/eic7700_evb.dts
+++ b/arch/riscv/dts/eic7700_evb.dts
@@ -65,7 +65,13 @@
 			reg = <0x0 0xE0000000 0x0 0x1000000>;
 			no-map;
 		};
+
+		lpcpu_reserved: lpcpures@DFFF0000 {
+			reg = <0x00 0xDFFF0000 0x00 0x00010000>;
+			no-map;
+		};
 	};
+
 	soc {
 		#address-cells = <2>;
 		#size-cells = <2>;
@@ -122,6 +128,12 @@
 	status = "okay";
 };
 &d0_mbox_srvc {
+	status = "okay";
+};
+&d0_mbox1 {
+	status = "okay";
+};
+&d0_mbox_srvc1 {
 	status = "okay";
 };
 &d0_pmp {
