feat:evb boot mode chang to bootmenu
Changelogs:
1. evb boot mode is changed to bootmenu
2. fix env erase bug, env erase will erase the excess blk
3. es_burn add cmd es_burn wboot, es_burn wroot

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/configs/eic7700_evb_defconfig
+++ b/configs/eic7700_evb_defconfig
@@ -3,8 +3,8 @@ CONFIG_SYS_MALLOC_LEN=0x10000000
 CONFIG_NR_DRAM_BANKS=1
 CONFIG_HAS_CUSTOM_SYS_INIT_SP_ADDR=y
 CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0xf0000000
-CONFIG_ENV_SIZE=0x2800
-CONFIG_ENV_OFFSET=0x119000
+CONFIG_ENV_SIZE=0x80000
+CONFIG_ENV_OFFSET=0x180000
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="eic7700_evb"
 CONFIG_OF_LIBFDT_OVERLAY=y
@@ -118,3 +118,4 @@ CONFIG_CONSOLE_NORMAL=y
 CONFIG_VIDEO_ANSI=y
 CONFIG_USB_KEYBOARD=y
 CONFIG_USE_PREBOOT=y
+CONFIG_DEFAULT_FDT_FILE="eswin/eic7700-evb-a2.dtb"
