perf:add env,display reserved mem
Changelogs:
1. hifive premier p550 add env kernel_comp_addr_r and kernel_comp_size
2. video DRM_ESWIN_FB_BUF set 0xe0000000, and add display reserved memory to dts

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/arch/riscv/dts/eic7700_evb.dts
+++ b/arch/riscv/dts/eic7700_evb.dts
@@ -56,6 +56,16 @@
 		device_type = "memory";
 		reg = <0x0 0x80000000 0x4 0x00000000>;
 	};
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		display_reserved: region@E0000000 {
+			reg = <0x0 0xE0000000 0x0 0x1000000>;
+			no-map;
+		};
+	};
 	soc {
 		#address-cells = <2>;
 		#size-cells = <2>;
