--- a/configs/eic7700_evb_defconfig
+++ b/configs/eic7700_evb_defconfig
@@ -79,6 +79,7 @@ CONFIG_DM_RESET=y
 CONFIG_RESET_ESWIN=y
 CONFIG_DM_RTC=y
 CONFIG_RTC_PCF8563=y
+# CONFIG_ESWIN_UART_LITE is not set
 CONFIG_ESWIN_UART_SYNOPSYS=y
 CONFIG_SPI=y
 CONFIG_DESIGNWARE_SPI=y
@@ -119,3 +120,4 @@ CONFIG_VIDEO_ANSI=y
 CONFIG_USB_KEYBOARD=y
 CONFIG_USE_PREBOOT=y
 CONFIG_DEFAULT_FDT_FILE="eswin/eic7700-evb-a2.dtb"
+CONFIG_PREBOOT="setenv fdt_addr ${fdtcontroladdr};fdt addr ${fdtcontroladdr};usb start"
