--- a/arch/riscv/dts/hifive-premier-p550.dts
+++ b/arch/riscv/dts/hifive-premier-p550.dts
@@ -56,6 +56,16 @@
 		device_type = "memory";
 		reg = <0x0 0x80000000 0x4 0x00000000>;
 	};
+	reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		display_reserved: region@E0000000 {
+			reg = <0x0 0xE0000000 0x0 0x1000000>;
+			no-map;
+		};
+	};
 	soc {
 		#address-cells = <2>;
 		#size-cells = <2>;
