refactor(vo): Add output to vidconsole support
Changelogs:
1. Support uboot console output to vidconsole.
2. Select CONFIG_ESWIN_LOGO_DISPLAY to display the eswin logo
   without vidconsole output.
3. When boot to mipi-dsi:
   (1)make uboot-menuconfig
   > Device Drivers > Graphics support > Eswin DRM Support
	Only select 'Eswin DW MIPI DSI Support',not select HDMI
   (2)changed eic7700_evb.dts:
              open mipi-dsi nodes, disable route_hdmi node.

Signed-off-by: fanglifei <fanglifei@eswincomputing.com>

--- a/arch/riscv/dts/eic7700_evb.dts
+++ b/arch/riscv/dts/eic7700_evb.dts
@@ -21,8 +21,8 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/soc/eswin-pmp.h>
 #include "eic770x.dtsi"
-// #include "dt-bindings/media/eswin_mipi_dsi.h"
-// #include "linux/media-bus-format.h"
+#include "dt-bindings/media/eswin_mipi_dsi.h"
+#include "media_bus_format.h"
 / {
 	#address-cells = <2>;
 	#size-cells = <2>;
@@ -215,6 +215,37 @@
 &display_logo {
 	status = "disabled";
 };
+&mipi_dsi {
+	status = "disabled";
+	panel {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		compatible = "simple-panel-dsi";
+		reg = <0>;
+		dsi,format = <MIPI_DSI_FMT_RGB888>;
+		bus-format = <MEDIA_BUS_FMT_RGB888_1X24>;
+		dsi,lanes = <4>;
+		status = "disabled";
+		display-timings {
+			native-mode = <&timing0>;
+			timing0: timing0 {
+				/*The fpga platform does not need to set the clock*/
+				clock-frequency = <148500000>;
+				hactive = <1080>;
+				vactive = <1920>;
+				hsync-len = <60>;
+				hback-porch = <60>;
+				hfront-porch = <60>;
+				vsync-len = <8>;
+				vback-porch = <8>;
+				vfront-porch = <8>;
+				hsync-active = <0>;
+				vsync-active = <0>;
+				pixelclk-active = <1>;
+			};
+		};
+	};
+};
 &dwc3_typec0 {
 		status = "okay";
 		dr_mode = "peripheral";
@@ -234,6 +265,9 @@
 };
 &route_hdmi {
 	status = "okay";
+};
+&route_mipi {
+	status = "disabled";
 };
 &osd {
 	status = "okay";
