--- a/configs/eic7700_evb_defconfig
+++ b/configs/eic7700_evb_defconfig
@@ -8,16 +8,19 @@ CONFIG_ENV_OFFSET=0x180000
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="eic7700_evb"
 CONFIG_OF_LIBFDT_OVERLAY=y
+CONFIG_DM_RESET=y
 CONFIG_SYS_LOAD_ADDR=0x80200000
 CONFIG_PCI=y
-CONFIG_PCIE_DW_ESWIN=y
-CONFIG_NVME_PCI=y
+CONFIG_AHCI=y
 CONFIG_TARGET_ESWIN_EVB_EIC7700=y
 CONFIG_ARCH_RV64I=y
 CONFIG_RISCV_SMODE=y
 CONFIG_SHOW_REGS=y
 CONFIG_FIT=y
 CONFIG_DISTRO_DEFAULTS=y
+CONFIG_USE_PREBOOT=y
+CONFIG_PREBOOT="setenv fdt_addr ${fdtcontroladdr};fdt addr ${fdtcontroladdr};usb start"
+CONFIG_DEFAULT_FDT_FILE="eswin/eic7700-evb-a2.dtb"
 CONFIG_DISPLAY_CPUINFO=y
 CONFIG_DISPLAY_BOARDINFO=y
 CONFIG_MISC_INIT_R=y
@@ -26,15 +29,14 @@ CONFIG_CMD_SBI=y
 CONFIG_SYS_BOOTM_LEN=0x04000000
 CONFIG_CMD_ERASEENV=y
 CONFIG_CMD_NVEDIT_EFI=y
-CONFIG_CMD_GPT=y
 CONFIG_CMD_GPIO=y
+CONFIG_CMD_GPT=y
 CONFIG_CMD_I2C=y
-CONFIG_CMD_LED=y
 CONFIG_CMD_ESWOTP=y
 CONFIG_CMD_LSBLK=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_PCI=y
-CONFIG_CMD_PINMUX=y
+CONFIG_CMD_SATA=y
 CONFIG_CMD_SF_TEST=y
 CONFIG_CMD_SPI=y
 CONFIG_CMD_USB=y
@@ -48,6 +50,7 @@ CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
+CONFIG_DWC_AHSATA_ESWIN=y
 CONFIG_CLK_ESWIN=y
 CONFIG_CLK_ESWIN_EIC770x=y
 CONFIG_USB_FUNCTION_FASTBOOT=y
@@ -59,11 +62,12 @@ CONFIG_FASTBOOT_FLASH_MMC_DEV=0
 CONFIG_ESWIN_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_DW=y
+CONFIG_LED=y
+CONFIG_LED_GPIO=y
 CONFIG_DM_MAILBOX=y
 CONFIG_ESWIN_UMBOX=y
 CONFIG_MISC=y
 CONFIG_I2C_EEPROM=y
-#CONFIG_ESWIN_PMP=y
 CONFIG_MMC=y
 CONFIG_MMC_IO_VOLTAGE=y
 CONFIG_MMC_UHS_SUPPORT=y
@@ -71,11 +75,10 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_SD_ESWIN=y
 CONFIG_SPI_FLASH_WINBOND=y
 CONFIG_DWC_ETH_ESWIN=y
-CONFIG_NVME=y
+CONFIG_NVME_PCI=y
+CONFIG_PCIE_DW_ESWIN=y
 CONFIG_PINCTRL=y
-CONFIG_PINCTRL_EIC7700=y
 CONFIG_PINCONF=y
-CONFIG_DM_RESET=y
 CONFIG_RESET_ESWIN=y
 CONFIG_DM_RTC=y
 CONFIG_RTC_PCF8563=y
@@ -85,7 +88,6 @@ CONFIG_SPI=y
 CONFIG_DESIGNWARE_SPI=y
 CONFIG_ESWIN_SPI=y
 CONFIG_USB=y
-CONFIG_DM_USB=y
 CONFIG_DM_USB_GADGET=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_DWC3=y
@@ -96,28 +98,14 @@ CONFIG_USB_UHCI_HCD=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_GENERIC=y
 CONFIG_USB_DWC3_ESWIN=y
+CONFIG_USB_KEYBOARD=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VENDOR_NUM=0x3452
 CONFIG_USB_GADGET_PRODUCT_NUM=0x7700
 CONFIG_VIDEO=y
+CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_DISPLAY=y
 CONFIG_DRM_ESWIN=y
 CONFIG_DRM_ESWIN_DW_HDMI=y
 CONFIG_DRM_ESWIN_DW_MIPI_DSI=y
-# CONFIG_UT_LIB is not set
-# CONFIG_UT_LOG is not set
-# CONFIG_UT_UNICODE is not set
-# CONFIG_UT_ENV is not set
-# CONFIG_UT_OVERLAY is not set
-CONFIG_LED=y
-CONFIG_LED_GPIO=y
-CONFIG_CMD_SATA=y
-CONFIG_AHCI=y
-CONFIG_DWC_AHSATA_AHCI=y
-CONFIG_DWC_AHSATA_ESWIN=y
-CONFIG_CONSOLE_NORMAL=y
-CONFIG_VIDEO_ANSI=y
-CONFIG_USB_KEYBOARD=y
-CONFIG_USE_PREBOOT=y
-CONFIG_DEFAULT_FDT_FILE="eswin/eic7700-evb-a2.dtb"
-CONFIG_PREBOOT="setenv fdt_addr ${fdtcontroladdr};fdt addr ${fdtcontroladdr};usb start"
+CONFIG_BMP_24BPP=y
