feat:P550 support efi,modify bootcmd
Changelogs:
1. support efi;
2. modify bootcmd to "bootflow scan";

BREAKING CHANGE:
1. repatition(support bootflow): run gpt_partition;
2. use debian boot/root image. Flash boot/root images to partition boot and rootfs, respectively
3. Execute the command "boot" to check whether the kernel can be booted properly

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/arch/riscv/dts/eic770x.dtsi
+++ b/arch/riscv/dts/eic770x.dtsi
@@ -528,7 +528,7 @@
 			clock-names = "hsp_cfg_clk";
 			reset-names = "hsp_sata_arstn";
 			resets = <&rst HSPDMA_RST_CTRL SW_HSP_SATA_ARSTN>;
-			status = "okay";
+			status = "disabled";
 		};
 		uart0: serial@50900000 {
 			status = "disabled";
