feat:ENV IN SPI FLASH,eMMC partition
Changelogs:
1. change env to save in spi flash offset 13.5M, size 512K
2. change default partition table
    boot,start=1MiB,size=512MiB,type=efi;
    swap,size=4096MiB,type=swap;
    root,size=30GiB,type=linuxfilesystem;
    userdata,type=linuxfilesystem,size=-

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/common/eswin/Makefile
+++ b/common/eswin/Makefile
@@ -4,5 +4,5 @@
 
 obj-$(CONFIG_CMD_ESWUPDATE) += eswupdate/
 obj-$(CONFIG_CMD_ESWOTP) += eswotp/
-obj-y += dosfstools/
-obj-y += lib/
+obj-$(CONFIG_CMD_ESWUPDATE) += dosfstools/
+obj-$(CONFIG_CMD_ESWUPDATE) += lib/
