feat:add cmd es_fs
Changelogs:
1. ESWIN write filesystem image file into MMC
2. cmd : es_fs write ifname  dev_part filename dev_num
    - Write System image file(.wic) from {ifname} {dev_part} to mmc {dev_num}
3. cmd : es_fs update ifname  dev_part filename wdev_part
    - write File system image file from {ifname} {dev_part} to mmc {dev_part_num}

Signed-off-by: xuxiang <xuxiang@eswincomputing.com>

--- a/cmd/Kconfig
+++ b/cmd/Kconfig
@@ -1253,6 +1253,13 @@ config CMD_ESWUPDATE
 	help
 	  Performs the Bootloader update boot flow
 
+config CMD_ESFS
+	bool "ESWIN filesystem command"
+	default n
+	help
+	  Enables ESWIN filesystem commands (e.g. write, update) that work for multiple
+	  fs types.
+
 config CMD_ESWOTP
 	bool "eswotp"
 	default n
