--- a/configs/eic7700_evb_a2_defconfig
+++ b/configs/eic7700_evb_a2_defconfig
@@ -30,8 +30,8 @@ CONFIG_SYS_BOOTM_LEN=0x04000000
 CONFIG_CMD_ERASEENV=y
 CONFIG_CMD_NVEDIT_EFI=y
 CONFIG_CMD_GPIO=y
-CONFIG_CMD_GPT=y
 CONFIG_CMD_I2C=y
+CONFIG_CMD_ESFS=y
 CONFIG_CMD_ESWOTP=y
 CONFIG_CMD_LSBLK=y
 CONFIG_CMD_MTD=y
@@ -82,7 +82,6 @@ CONFIG_PINCONF=y
 CONFIG_RESET_ESWIN=y
 CONFIG_DM_RTC=y
 CONFIG_RTC_PCF8563=y
-# CONFIG_ESWIN_UART_LITE is not set
 CONFIG_ESWIN_UART_SYNOPSYS=y
 CONFIG_SPI=y
 CONFIG_DESIGNWARE_SPI=y
