--- a/configs/hifive_premier_p550_defconfig
+++ b/configs/hifive_premier_p550_defconfig
@@ -32,6 +32,7 @@ CONFIG_CMD_GPIO=y
 CONFIG_CMD_LED=y
 CONFIG_CMD_GPT=y
 CONFIG_CMD_I2C=y
+CONFIG_CMD_ESFS=y
 CONFIG_CMD_ESWOTP=y
 CONFIG_CMD_LSBLK=y
 CONFIG_CMD_MTD=y
