configs: add sata init for ESWIN P550 boards
Commit e562f549e0c8 ("refactor(vo): Add output to vidconsole support")
removed 'sata init' from CONFIG_PREBOOT. Add it back in.

Fixes: e562f549e0c8 ("refactor(vo): Add output to vidconsole support")
Signed-off-by: Heinrich Schuchardt <heinrich.schuchardt@canonical.com>

--- a/configs/hifive_premier_p550_defconfig
+++ b/configs/hifive_premier_p550_defconfig
@@ -19,7 +19,7 @@ CONFIG_SHOW_REGS=y
 CONFIG_FIT=y
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_USE_PREBOOT=y
-CONFIG_PREBOOT="setenv fdt_addr ${fdtcontroladdr};fdt addr ${fdtcontroladdr};usb start"
+CONFIG_PREBOOT="setenv fdt_addr ${fdtcontroladdr};fdt addr ${fdtcontroladdr};usb start;sata init"
 CONFIG_DISPLAY_CPUINFO=y
 CONFIG_DISPLAY_BOARDINFO=y
 CONFIG_MISC_INIT_R=y
